--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -1,4 +1,4 @@
-title: Pages
+title: Home
 sections:
   main:
     display: Main
@@ -44,6 +44,16 @@ sections:
         field:
           default: true
           display: 'Show TopLeft'
+          type: toggle
+          icon: toggle
+          listable: hidden
+          instructions_position: above
+          read_only: false
+      -
+        handle: show_chat
+        field:
+          default: true
+          display: 'Show Chat'
           type: toggle
           icon: toggle
           listable: hidden
