--- a/content/trees/navigation/main_nav.yaml
+++ b/content/trees/navigation/main_nav.yaml
@@ -5,3 +5,6 @@ tree:
   -
     id: f0f9d3c7-f832-4642-8a80-ab4db35df57b
     entry: fc11b0aa-acd2-4747-bacc-566a8a01e48c
+  -
+    id: 3d678569-21a9-4477-9905-fc157162cf71
+    entry: 6015244d-1ad2-4b99-bd50-307aa7a8fa79
