--- a/resources/blueprints/collections/pages/about.yaml
+++ b/resources/blueprints/collections/pages/about.yaml
@@ -108,3 +108,16 @@ sections:
           listable: hidden
           instructions_position: above
           read_only: false
+      -
+        handle: chat_light
+        field:
+          default: true
+          display: 'Chat Light'
+          type: toggle
+          icon: toggle
+          instructions: 'Toggle on to have the light version of Chat Button'
+          listable: hidden
+          instructions_position: above
+          read_only: false
+          if:
+            show_chat: 'equals true'
