--- a/resources/blueprints/collections/pages/pages.yaml
+++ b/resources/blueprints/collections/pages/pages.yaml
@@ -1,4 +1,4 @@
-title: Home
+title: Pages
 sections:
   main:
     display: Main
@@ -55,6 +55,19 @@ sections:
           listable: hidden
           instructions_position: above
           read_only: false
+      -
+        handle: chat_light
+        field:
+          default: true
+          display: 'Chat Light'
+          type: toggle
+          icon: toggle
+          instructions: 'Toggle on to have the light version of Chat Button'
+          listable: hidden
+          instructions_position: above
+          read_only: false
+          if:
+            show_chat: 'equals true'
   our_mission:
     display: 'Our Mission'
     fields:
