--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "tailwindcss": "^3.0.19",
         "tailwindcss-debug-screens": "^2.2.1",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "alpinejs": "^3.10.2"
     }
 }
