--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "alpinejs": "^3.10.2"
+        "alpinejs": "^3.10.2",
+        "flickity": "^3.0.0",
+        "flickity-fade": "^2.0.0"
     }
 }
