--- a/content/globals/partners.yaml
+++ b/content/globals/partners.yaml
@@ -1,21 +1,25 @@
 title: Partners
 data:
-    partner_heading: 'Our Partners'
-    partner_subheading: 'We believe in better together'
-    companies:
-      -
-        company_image: partners/microsoft.svg
-        type: companies
-        enabled: true
-      -
-        company_image: partners/google.svg
-        type: companies
-        enabled: true
-      -
-        company_image: partners/aws.svg
-        type: companies
-        enabled: true
-      -
-        company_image: partners/deloitte.svg
-        type: companies
-        enabled: true
+  partner_heading: 'Our Partners'
+  partner_subheading: 'We believe in better together'
+  companies:
+    -
+      company_image: partners/microsoft.svg
+      type: companies
+      enabled: true
+      company_name: Microsoft
+    -
+      company_image: partners/google.svg
+      type: companies
+      enabled: true
+      company_name: Google
+    -
+      company_image: partners/aws.svg
+      type: companies
+      enabled: true
+      company_name: 'Amazon AWS'
+    -
+      company_image: partners/deloitte.svg
+      type: companies
+      enabled: true
+      company_name: Deloite
