--- a/resources/blueprints/globals/partners.yaml
+++ b/resources/blueprints/globals/partners.yaml
@@ -48,6 +48,17 @@ sections:
                     listable: hidden
                     instructions_position: above
                     read_only: false
+                -
+                  handle: company_name
+                  field:
+                    input_type: text
+                    antlers: false
+                    display: 'Company Name'
+                    type: text
+                    icon: text
+                    listable: hidden
+                    instructions_position: above
+                    read_only: false
           display: Companies
           type: replicator
           icon: replicator
