Adding Screen Sizes
Getting the Home Link align and just black

Adding a Animated Count up Function

Making 4xl Screen layout match XD file for Home Page

4xl Screen Sizes completed

--- a/content/trees/collections/pages.yaml
+++ b/content/trees/collections/pages.yaml
@@ -5,3 +5,5 @@ tree:
     entry: fc11b0aa-acd2-4747-bacc-566a8a01e48c
   -
     entry: 6015244d-1ad2-4b99-bd50-307aa7a8fa79
+  -
+    entry: faf62637-5bf0-4ec6-9951-d6792fa16959
