--- a/content/globals/footer.yaml
+++ b/content/globals/footer.yaml
@@ -1,7 +1,7 @@
 title: Footer
 data:
-  copy_label: '© 2021 confclear - Confluence Clearing Limited registered in England number 13668788 at Hill Stables, Little Plumpton, Lancashire PR4 3PJ'
   address_heading: 'Head Office'
   contact_heading: Enquiries
-  text_link_text: 'For any inquiries or questions or please'
+  text_link_text: 'For any inquiries or questions please'
   link_content: 'contact us'
+  copy_label: '© 2021 confclear - Confluence Clearing Limited registered in England number 13668788 at Hill Stables, Little Plumpton, Lancashire PR4 3PJ'
