--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@barba/core": "^2.9.7",
         "alpinejs": "^3.10.2",
+        "aos": "^2.3.4",
         "flickity": "^3.0.0",
         "flickity-fade": "^2.0.0",
         "gsap": "^3.10.4"
