Updated Composer and Statamic
Also AOS to Templates

--- a/content/trees/navigation/main_nav.yaml
+++ b/content/trees/navigation/main_nav.yaml
@@ -8,3 +8,6 @@ tree:
   -
     id: 3d678569-21a9-4477-9905-fc157162cf71
     entry: 6015244d-1ad2-4b99-bd50-307aa7a8fa79
+  -
+    id: f88c23f6-682d-49df-9eb5-19af8dc45987
+    entry: faf62637-5bf0-4ec6-9951-d6792fa16959
