--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "type": "project",
     "require": {
         "php": "^7.4 || ^8.0",
+        "aryehraber/statamic-captcha": "^1.8",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.82",
         "laravel/tinker": "^2.5",
-        "statamic/cms": "3.3.18"
+        "statamic/cms": "3.3.18",
+        "statamic/seo-pro": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
