--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,7 @@
 {
     "/js/site.js": "/js/site.js",
     "/js/countUp.js": "/js/countUp.js",
+    "/vendor/app/js/cp.js": "/vendor/app/js/cp.js",
+    "/vendor/app/css/cp.css": "/vendor/app/css/cp.css",
     "/css/tailwind.css": "/css/tailwind.css"
 }
